--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 appdirs==1.4.3
+numpy==1.12.1
 packaging==16.8
+pkg-resources==0.0.0
 pyparsing==2.2.0
 six==1.10.0
-svg.path==2.2
+svgpathtools==1.3.1
+svgwrite==1.1.10
